--- a/TeamWork/TIHWDF/styleTIHWDF.css
+++ b/TeamWork/TIHWDF/styleTIHWDF.css
@@ -1,5 +1,4 @@
 .content {
   height: 2200px;
   right: 0;
-}
-/*# sourceMappingURL=styleTIHWDF.css.map */
+}/*# sourceMappingURL=styleTIHWDF.css.map */
